@@ -1,6 +1,7 @@
 // -*- C++ -*-
 #include "Rivet/Projections/UnstableFinalState.hh"
 
+/// @todo Replace with PID::isParton()
 #define IS_PARTON_PDGID(id) ( abs(id) <= 100 && abs(id) != 22 && (abs(id) < 11 || abs(id) > 18) )
 
 namespace Rivet {
@@ -9,6 +10,7 @@ namespace Rivet {
   void UnstableFinalState::project(const Event& e) {
     _theParticles.clear();
 
+    /// @todo Replace PID veto list with PID:: functions?
     vector<PdgId> vetoIds;
     vetoIds += 22; // status 2 photons don't count!
     vetoIds += 110; vetoIds += 990; vetoIds += 9990; // Reggeons
@@ -16,18 +18,17 @@ namespace Rivet {
     foreach (GenParticle* p, Rivet::particles(e.genEvent())) {
       const int st = p->status();
       bool passed =
-        (st == 1 || (st == 2 && find(vetoIds.begin(), vetoIds.end(), abs(p->pdg_id())) == vetoIds.end())) &&
-        !IS_PARTON_PDGID(p->pdg_id()) && ///< Always veto partons?
+        (st == 1 || (st == 2 && !contains(vetoIds, abs(p->pdg_id())))) &&
+        !IS_PARTON_PDGID(p->pdg_id()) && ///< Always veto partons
         !p->is_beam() && // Filter beam particles
-	_cuts->accept(p->momentum());
+        _cuts->accept(p->momentum());
 
       // Avoid double counting by re-marking as unpassed if particle ID == parent ID
       const GenVertex* pv = p->production_vertex();
       const GenVertex* dv = p->end_vertex();
       if (passed && pv) {
-        for (GenVertex::particles_in_const_iterator pp = pv->particles_in_const_begin() ;
-             pp != pv->particles_in_const_end() ; ++pp) {
-          if ( p->pdg_id() == (*pp)->pdg_id() && (*pp)->status() == 2 ) {
+        for (GenVertex::particles_in_const_iterator pp = pv->particles_in_const_begin(); pp != pv->particles_in_const_end(); ++pp) {
+          if (p->pdg_id() == (*pp)->pdg_id() && (*pp)->status() == 2) {
             passed = false;
             break;
           }
@@ -35,9 +36,7 @@ namespace Rivet {
       }
 
       // Add to output particles collection
-      if (passed) {
-        _theParticles.push_back(Particle(*p));
-      }
+      if (passed) _theParticles.push_back(Particle(*p));
 
       // Log parents and children
       if (getLog().isActive(Log::TRACE)) {
@@ -47,14 +46,12 @@ namespace Rivet {
                   << ", eta = " << p->momentum().eta()
                   << ": result = " << std::boolalpha << passed);
         if (pv) {
-          for (GenVertex::particles_in_const_iterator pp = pv->particles_in_const_begin() ;
-               pp != pv->particles_in_const_end() ; ++pp) {
+          for (GenVertex::particles_in_const_iterator pp = pv->particles_in_const_begin(); pp != pv->particles_in_const_end(); ++pp) {
             MSG_TRACE("  parent ID = " << (*pp)->pdg_id());
           }
         }
         if (dv) {
-          for (GenVertex::particles_out_const_iterator pp = dv->particles_out_const_begin() ;
-               pp != dv->particles_out_const_end() ; ++pp) {
+          for (GenVertex::particles_out_const_iterator pp = dv->particles_out_const_begin(); pp != dv->particles_out_const_end(); ++pp) {
             MSG_TRACE("  child ID  = " << (*pp)->pdg_id());
           }
         }
